# swish-e

./: COPYING  INSTALL  INSTALL.pod  MANIFEST  Makefile.am  Makefile.in  README  README-2.0  README-PERL  README-SWISH-E  README.cvs  README.md  SWISH-LIBRARY.pod  SWISH-PERL  SWISH-RUN.pod  TODO  VERSION  aclocal.m4  bootstrap  buildswishe.pl  configure  configure.ac  configure.in  do-rewrite.pl  rewrite-swish-src.pl  swish-config.in  swish-daily.pl  swish-e.pc.in  win32.nsi  win32src.nsi
example/: Makefile.am  Makefile.in  README  search.cgi.in  search.tt  swish.cgi  swish.cgi.in  swish.tmpl  swish.tt  swish2.tmpl
example/modules/: DefaultHighlight.pm  PhraseHighlight.pm  TemplateDefault.pm  TemplateDumper.pm  TemplateHTMLTemplate.pm  TemplateToolkit.pm
example/templates/: common_header  page_layout  search.tt
filters/: Makefile.am  Makefile.in  README  swish-filter-test.in
filters/SWISH/: Filter.pm  Filter.pm.in  Makefile.am  Makefile.in
html/: .htaccess  INSTALL.html  Makefile.am  Makefile.in  README.html  SWISH-CONFIG.html  SWISH-FAQ.html  SWISH-LIBRARY.html  SWISH-PERL.html  SWISH-RUN.html  index.html  index_long.html  index_spa.html  library.html  split.pl  style.css  swish.conf
man/: Makefile.am  Makefile.in
pod/: .htaccess  CHANGES.pod  INSTALL.pod  Makefile.am  Makefile.in  README.pod  SWISH-3.0.pod  SWISH-BUGS.pod  SWISH-CONFIG.pod  SWISH-FAQ.pod  SWISH-LIBRARY.pod  SWISH-PERL.pod  SWISH-RUN.pod  SWISH-SEARCH.pod  search.cgi  swish-e.pod
prog-bin/: DirTree.pl  DirTree.pl.in  Makefile.am  Makefile.in  MySQL.pl  README  SwishSpiderConfig.pl  file.pl  index_hypermail.pl  pdf2html.pm  pdf2xml.pm  spider.pl  spider.pl.in
src/: Makefile.am  Makefile.in  _datatypes.c  _datatypes.h  _module_example.c  _module_example.h  _swish3.x-layout.txt  acconfig.h.in  altavista.c  altavista.h  array.c  array.h  bash.c  bash.h  btree.c  btree.h  check.c  check.h  compress.c  compress.h  config.h  configure.in  date_time.c  date_time.h  db.c  db.h  db_berkeley_db.c  db_berkeley_db.h  db_gdbm.c  db_gdbm.h  db_native.c  db_native.h  db_read.c  db_write.c  deflate.c  deflate.h  docprop.c  docprop.h  docprop_write.c  double_metaphone.c  (+100 more)
src/expat/: Makefile.in  expat.ncb
src/replace/: Makefile.am  Makefile.in  mkstemp.c  mkstemp.h  setenv.c  setenv.h
src/snowball/: Makefile.am  Makefile.in  api.c  api.h  header.h  stem_de.c  stem_de.h  stem_dk.c  stem_dk.h  stem_en1.c  stem_en1.h  stem_en2.c  stem_en2.h  stem_es.c  stem_es.h  stem_fi.c  stem_fi.h  stem_fr.c  stem_fr.h  stem_hu.c  stem_hu.h  stem_it.c  stem_it.h  stem_nl.c  stem_nl.h  stem_no.c  stem_no.h  stem_pt.c  stem_pt.h  stem_ro.c  stem_ro.h  stem_ru.c  stem_ru.h  stem_se.c  stem_se.h  utilities.c
src/vms/: acconfig.h_vms  build_swish-e.com  descrip.mms  descrip_axp.mms  descrip_libxml2.mms  descrip_vax.mms  fetch_http.c  libtest.opt  readme_vms.txt
src/win32/: API.dsp  acconfig.h  build-perl.bat  build.sh  config.h  daily.sh  dirent.c  dirent.h  dist.sh  dllswish-e.def  dllswishe.dsp  filebase.nsh  fixperl.pl  get_prefix.c  installer.nsi  libswish-e.lib  libswishe.dsp  libswishe.lib  libswishindex.dsp  mkstemp.c  release.nsi  swishe.dsp  swishe.dsw
swish-e/: COPYING  INSTALL.pod  MANIFEST  MANIFEST.SKIP  Makefile.am  Makefile.in  README  README-FILTERS  README-LIB  README.cvs  README.pod  SWISH-3.0.pod  SWISH-CONFIG.pod  SWISH-SEARCH.pod  TODO  aclocal.m4  bootstrap  buildswishe.pl  config.cache  config.status  configure  configure.in  swish-config.in  swish-daily.pl  swish-e.pc.in  win32.nsi  win32src.nsi
swish-e/conf/: Makefile.am  Makefile.in  README  example1.config  example2.config  example3.config  example4.config  example5.config  example6.config  example7.config  example8.config  user.config
swish-e/debian/: changelog  control  copyright  files  swish-e.doc-base  swish-e.substvars
swish-e/doc/: Makefile.in  split.conf  swish.conf
swish-e/example/: Makefile.am  Makefile.in  README  search.cgi.in  search.tt  swish.cgi  swish.cgi.in  swish.tmpl  swish.tt  swish2.cgi  swish2.tmpl  swish3.cgi
swish-e/filter-bin/: Makefile.am  Makefile.in  README  _binfilter.sh  _docfilter.sh  _pdf2html.pl  _pdffilter.sh  swish_filter.pl.in
swish-e/filters/: Makefile.am  Makefile.in  README  swish-filter-test.in
swish-e/html/: .swishcgi.conf  CHANGES.html  INSTALL.html  Makefile.am  Makefile.in  README.html  SWISH-3.0.html  SWISH-CONFIG.html  SWISH-LIBRARY.html  SWISH-PERL.html  SWISH-RUN.html  SWISH-SEARCH.html  compression.html  credits.html  filters.html  index.html  index_long.html  perl.html  php.html  search.html  searchdoc.html
swish-e/man/: Makefile.am  Makefile.in
swish-e/perl/: API.pm  API.xs  Changes  MANIFEST  Makefile.PL  Makefile.PL.in  Makefile.mingw  README  SWISHE.pm  SWISHE.xs  test.pl  typemap
swish-e/pod/: CHANGES.pod  INSTALL.pod  Makefile.am  Makefile.in  README.pod  SWISH-3.0.pod  SWISH-BUGS.pod  SWISH-CONFIG.pod  SWISH-FAQ.pod  SWISH-LIBRARY.pod  SWISH-PERL.pod  SWISH-RUN.pod  SWISH-SEARCH.pod  search.cgi  style.css
swish-e/prog-bin/: DirTree.pl  DirTree.pl.in  Makefile.am  Makefile.in  MySQL.pl  README  SwishSpiderConfig.pl  doc2txt.pm  index_hypermail.pl  pdf2html.pm  pdf2xml.pm  spider.pl  spider.pl.in
swish-e/rpm/: swish-e.spec.in
swish-e/src/: Makefile.am  Makefile.in  _datatypes.c  _datatypes.h  _module_example.c  _module_example.h  _new_parser-dev.txt  acconfig.h.in  altavista.c  array.c  array.h  bash.h  btree.c  btree.h  check.c  check.h  check.sh  compress.c  compress.h  config.h  configure  date_time.c  date_time.h  db.c  db.h  db_berkeley_db.c  db_berkeley_db.h  db_gdbm.c  db_gdbm.h  db_native.c  db_native.h  db_read.c  db_write.c  debug_mem.pl  deflate.c  deflate.h  descrip.mms  docprop.c  docprop.h  docprop_write.c  (+97 more)
swish-e/tests/: Makefile.am  Makefile.in  check_index  check_metasearch  check_search  common.sh  test.config  test.fuzzy.config  test.html  test.xml  test_meta.html  test_meta2.html  test_phrase.html  (+1 more)
tests/: Makefile.am  Makefile.in  check_fuzzy  check_metasearch  common.sh  test.config  test.html  test.txt  test.xml  test_meta.html  test_phrase.html
(+340 files in other folders)
