perlmoduledir = $(libexecdir)/perl
exampledir = $(datadir)/doc/$(PACKAGE)/examples/filters

example_DATA = README

nobase_perlmodule_SCRIPTS = \
    SWISH/Filter.pm \
    SWISH/Filters/Doc2txt.pm \
    SWISH/Filters/Pdf2HTML.pm \
    SWISH/Filters/ID3toHTML.pm \
    SWISH/Filters/XLtoHTML.pm

EXTRA_DIST = \
    README \
    SWISH/Filter.pm \
    SWISH/Filters/Doc2txt.pm \
    SWISH/Filters/Pdf2HTML.pm \
    SWISH/Filters/ID3toHTML.pm \
    SWISH/Filters/XLtoHTML.pm
